--- a/app/src/main/res/layout/activity_main_password.xml
+++ b/app/src/main/res/layout/activity_main_password.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:text="잠금 해제"
-            android:textSize="28dp"
+            android:textSize="28sp"
             android:textStyle="bold"
             android:textColor="@color/font" />
 
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="비밀번호를 입력해주세요"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textColor="@color/font_sub" />
 
     </LinearLayout>
@@ -93,7 +93,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="1"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -105,7 +105,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="2"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -116,7 +116,7 @@
                 android:layout_height="80dp"
                 android:background="@drawable/keypad"
                 android:text="3"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -137,7 +137,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="4"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -149,7 +149,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="5"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -160,7 +160,7 @@
                 android:layout_height="80dp"
                 android:background="@drawable/keypad"
                 android:text="6"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -181,7 +181,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="7"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -193,7 +193,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="8"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -204,7 +204,7 @@
                 android:layout_height="80dp"
                 android:background="@drawable/keypad"
                 android:text="9"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -229,7 +229,7 @@
                 android:layout_marginRight="45dp"
                 android:background="@drawable/keypad"
                 android:text="0"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
