--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -40,7 +40,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:text="비밀번호"
-                android:textSize="28dp"
+                android:textSize="28sp"
                 android:textStyle="bold"
                 android:textColor="@color/font" />
 
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="새 비밀번호를 입력해주세요"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textColor="@color/font_sub" />
 
         </LinearLayout>
@@ -114,7 +114,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="1"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -126,7 +126,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="2"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -137,7 +137,7 @@
                     android:layout_height="80dp"
                     android:background="@drawable/keypad"
                     android:text="3"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -158,7 +158,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="4"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -170,7 +170,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="5"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -181,7 +181,7 @@
                     android:layout_height="80dp"
                     android:background="@drawable/keypad"
                     android:text="6"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -202,7 +202,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="7"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -214,7 +214,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="8"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -225,7 +225,7 @@
                     android:layout_height="80dp"
                     android:background="@drawable/keypad"
                     android:text="9"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
@@ -250,7 +250,7 @@
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="0"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/font" />
 
