--- a/app/src/main/res/layout/align_dialog_custom.xml
+++ b/app/src/main/res/layout/align_dialog_custom.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:text="기간별 보기"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -83,7 +83,7 @@
             android:text="전체보기"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
@@ -96,7 +96,7 @@
             android:text="저장"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
