--- a/app/src/main/res/layout/delete_dialog_custom.xml
+++ b/app/src/main/res/layout/delete_dialog_custom.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:text="사진 삭제"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -46,7 +46,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="25dp"
         android:text="사진을 삭제하시겠습니까?"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/font" />
 
     <LinearLayout
@@ -67,7 +67,7 @@
             android:text="삭제"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
@@ -80,7 +80,7 @@
             android:text="취소"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
