--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -104,7 +104,7 @@
                     android:layout_centerInParent="true"
                     android:clickable="true"
                     android:textColor="@color/font"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <ImageView
@@ -134,7 +134,7 @@
                     android:singleLine="true"
                     android:textColor="@color/pastel_700"
                     android:textColorHint="@color/pastel_700"
-                    android:textSize="12dp" />
+                    android:textSize="12sp" />
 
             </RelativeLayout>
 
@@ -314,7 +314,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="화남"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -341,7 +341,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="쿨"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -367,7 +367,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="슬픔"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
                                 </LinearLayout>
@@ -401,7 +401,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="아픔"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -428,7 +428,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="웃음"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -454,7 +454,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="보통"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
                                 </LinearLayout>
@@ -489,7 +489,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="나쁨"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -516,7 +516,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="좋음"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -542,7 +542,7 @@
                                             android:layout_marginTop="5dp"
                                             android:text="피곤"
                                             android:textColor="@color/font"
-                                            android:textSize="16dp" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
                                 </LinearLayout>
