--- a/app/src/main/res/layout/msg_dialog.xml
+++ b/app/src/main/res/layout/msg_dialog.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:text="title"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
 <!--        <ImageButton-->
@@ -46,7 +46,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="25dp"
         android:text="contents"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/font" />
 
     <LinearLayout
@@ -66,7 +66,7 @@
             android:text="yes"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
@@ -80,7 +80,7 @@
             android:text="no"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
