--- a/app/src/main/res/layout/password_caution_dialog_custom.xml
+++ b/app/src/main/res/layout/password_caution_dialog_custom.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:text="주의사항"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -45,7 +45,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="25dp"
         android:text="비밀번호 분실 시 앱을 삭제하고 재설치 해야하며,\n 재설치 시 기존 일기 내용은 삭제되므로\n 미리 백업하시기 바랍니다."
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:lineSpacingExtra="5dp"
         android:textColor="@color/font" />
 
@@ -65,7 +65,7 @@
             android:background="@drawable/button"
             android:text="확인"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
