--- a/app/src/main/res/layout/stop_write_dialog_custom.xml
+++ b/app/src/main/res/layout/stop_write_dialog_custom.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:text="작성 취소"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -45,7 +45,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="25dp"
         android:text="일기 작성을 그만두시겠습니까?\n 작성한 일기는 저장되지 않습니다."
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:lineSpacingExtra="5dp"
         android:textColor="@color/font" />
 
@@ -66,7 +66,7 @@
             android:background="@drawable/button"
             android:text="뒤로가기"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
@@ -79,7 +79,7 @@
             android:background="@drawable/button"
             android:text="계속 작성"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
