--- a/app/src/main/res/layout/update_dialog_custom.xml
+++ b/app/src/main/res/layout/update_dialog_custom.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:text="일기 수정"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -45,7 +45,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="25dp"
         android:text="일기를 삭제 또는 수정하시겠습니까?"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/font" />
 
     <LinearLayout
@@ -66,7 +66,7 @@
             android:text="삭제"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
@@ -79,7 +79,7 @@
             android:text="수정"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textSize="15sp"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
