--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -92,10 +92,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="사진 앨범에서 선택"
+                android:text="앨범에서 선택"
                 android:textColor="@color/font"
                 android:textSize="15sp" />
 
         </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
